--- a/awards/index.html
+++ b/awards/index.html
@@ -626,7 +626,7 @@
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
         </div>
 
-        <!-- Project 5 -->
+        <!-- Project 5 
         <div class="project-card">
           <div class="project-card-image-container">
             <img src="assets/img/portfolio/projectE.webp" alt="Project 5" class="project-card-image">
@@ -643,7 +643,7 @@
           </a>
           <a class="github-button" href="https://github.com/Jayanth0124/cgpa/" data-icon="octicon-star"
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
-        </div>
+        </div> -->
 
         <!-- Project 6 -->
         <div class="project-card">
@@ -667,7 +667,7 @@
         <!-- Project 7 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/p7.png" alt="Project 6" class="project-card-image">
+            <img src="assets/img/portfolio/p7.png" alt="Project 7" class="project-card-image">
           </div>
           <div class="project-card-title">
             <span>Advanced Object Analyzer</span>
@@ -686,7 +686,7 @@
         <!-- Project 8 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/p8.png" alt="Project 6" class="project-card-image">
+            <img src="assets/img/portfolio/p8.png" alt="Project 8" class="project-card-image">
           </div>
           <div class="project-card-title">
             <span>ShadeShaper - Color Palette Generator 🎨</span>
@@ -706,7 +706,7 @@
         <!-- Project 9 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/p9.png" alt="Project 6" class="project-card-image">
+            <img src="assets/img/portfolio/p9.png" alt="Project 9" class="project-card-image">
           </div>
           <div class="project-card-title">
             <span>Personal Fitness Tracker 🏋️</span>
@@ -720,6 +720,26 @@
             <span>Visit</span>
           </a>
           <a class="github-button" href="https://github.com/Jayanth0124/fitness-tracker" data-icon="octicon-star"
+            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
+        </div>
+
+        <!-- Project 10 -->
+        <div class="project-card">
+          <div class="project-card-image-container">
+            <img src="assets/img/portfolio/mind.png" alt="Project 10" class="project-card-image">
+          </div>
+          <div class="project-card-title">
+            <span>🧠 MindoraGPT </span>
+          </div>
+          <div class="project-card-description">
+            Your friendly mental wellness chatbot offering supportive conversations, affirmations, and
+            AI-powered care.🌿 Built with compassion, it blends technology and empathy to help you feel heard, calm, and
+            uplifted.
+          </div>
+          <a href="https://mindoragpt.netlify.app/" class="project-card-button" target="_blank">
+            <span>Visit</span>
+          </a>
+          <a class="github-button" href="https://github.com/Jayanth0124/mental-wellness-chatbot" data-icon="octicon-star"
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
         </div>
 
@@ -1569,21 +1589,21 @@
               </div>
               <div class="my-3">
                 <div id="error-message" class="error-message" style="display: none; 
-                            color: red; 
-                            border: 2px solid crimson; 
-                            padding: 10px; 
-                            border-radius: 8px; 
-                            background-color: #ffe6e6; 
-                            font-weight: bold;
-                            box-shadow: 0 0 10px rgba(220, 20, 60, 0.5);">
+                              color: red; 
+                              border: 2px solid crimson; 
+                              padding: 10px; 
+                              border-radius: 8px; 
+                              background-color: #ffe6e6; 
+                              font-weight: bold;
+                              box-shadow: 0 0 10px rgba(220, 20, 60, 0.5);">
                   "Oops! Your message ghosted the internet. Try again before it moves on. 👻"
                 </div>
 
                 <div id="response-message" class="sent-message" style="display: none; color: green; 
-                         border: 2px solid gold; 
-                         padding: 10px; 
-                         border-radius: 8px; 
-                         background-color: #fff8dc;">
+                          border: 2px solid gold; 
+                          padding: 10px; 
+                          border-radius: 8px; 
+                          background-color: #fff8dc;">
 
                   "Congratulations! Your message is on its way! Let’s hope it doesn’t get lost like my motivation. 😅"
                 </div>
