--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/dp.jpg" alt="" class="img-fluid box">
+        <img src="assets/img/dp1.jpg" alt="" class="img-fluid box">
         <h1 class="text-light"><a href="index.html">Jayanth</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/jayanth0124" class="twitter" target="_blank" rel="noopener noreferrer"><i
@@ -146,18 +146,18 @@
       <div class="container">
         <div class="section-title">
           <h2>About</h2>
-          <p>As a dedicated Front-End Developer, I specialize in creating engaging, user-friendly web interfaces with a
-            strong emphasis on accessibility and responsive design. Proficient in HTML, CSS, and JavaScript, I bring
-            designs to life with seamless interactions and modern aesthetics. My expertise includes working with
-            frameworks such as React and Vue to build dynamic, high-performance applications. Committed to continuous
-            learning, I stay updated with the latest trends and technologies to deliver cutting-edge solutions. I excel
-            in collaborative environments, ensuring high-quality code and effective teamwork. My goal is to enhance user
-            experiences through innovative and efficient front-end development.</p>
+          <p>As a passionate Front-End Developer, I specialize in building responsive, user-centric web interfaces using
+            HTML, CSS, and JavaScript. I have hands-on experience developing interactive web applications—ranging from
+            API-powered tools to AI-integrated platforms—while using frameworks like React and Vue to deliver dynamic,
+            high-performance solutions. My skill set includes UI/UX design, Python, Firebase, and working with RESTful
+            APIs. I’m committed to continuous learning, earning certifications, and building real-world projects to stay
+            up to date with evolving technologies. I thrive in collaborative, agile environments and focus on writing
+            clean, scalable, and accessible front-end code that enhances user experience.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-12 about-image" data-aos="fade-right">
-            <img src="assets/img/model2.svg" class="img-fluid" alt="Model Image">
+            <img src="assets/img/j2.jpg" class="img-fluid" alt="Model Image">
           </div>
           <div class="col-lg-8 col-md-12 pt-4 pt-lg-0 about-content" data-aos="fade-left">
             <div class="custom-card">
@@ -166,9 +166,9 @@
               <div class="custom-card-inner">
                 <h3>Frontend Developer</h3>
                 <p class="fst-italic">
-                  I am passionate about staying up-to-date with the latest technologies and trends in frontend
-                  development to continuously improve my skills and deliver high-quality solutions that meet the needs
-                  of clients and users.
+                  I'm currently expanding my skills toward full-stack development and learning about AI and large
+                  language models (LLMs). I’m committe    d to staying updated with the latest innovations to build modern
+                  and effective web applications.
                 </p>
                 <div class="row">
                   <div class="col-lg-6">
@@ -192,9 +192,10 @@
                   </div>
                 </div>
                 <p>
-                  As a frontend developer, I specialize in building user interfaces and experiences using HTML, CSS, and
-                  JavaScript. My primary focus is on creating responsive and visually appealing websites and web
-                  applications that engage users and enhance their online experience.
+                  As a Front-End Developer, I build responsive and user-friendly websites using HTML, CSS, and
+                  JavaScript. I enjoy creating clean, visually appealing interfaces and working on real-world projects
+                  that improve user experience. I'm always learning new technologies to improve my skills and build
+                  better web applications.
                 </p>
               </div>
             </div>
@@ -210,7 +211,7 @@
           width: 100%;
           height: auto;
           max-width: 500px;
-          animation: upDown 1.5s linear infinite;
+          
         }
 
         @keyframes upDown {
@@ -739,8 +740,8 @@
           <a href="https://mindoragpt.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
           </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/mental-wellness-chatbot" data-icon="octicon-star"
-            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
+          <a class="github-button" href="https://github.com/Jayanth0124/mental-wellness-chatbot"
+            data-icon="octicon-star" data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
         </div>
 
       </div>
