--- a/awards/nptel.html
+++ b/awards/nptel.html
@@ -203,6 +203,10 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide neumorphic">
+                  <img src="assets/img/portfolio/HCI.jpg" alt="Certification Image 2">
+                </div>
+
+                <div class="swiper-slide neumorphic">
                   <img src="assets/img/portfolio/english.jpg" alt="Certification Image 1">
                 </div>
 
@@ -227,8 +231,9 @@
             </div>
             <div class="portfolio-description neumorphic">
               <h2>Certificate with Topics</h2>
-              <h5>1. Technical English for Engineers</h5>
-              <h5>2. Introduction to Internet of Things</h5>
+              <h5>1. Human Computer Interaction</h5>
+              <h5>2. Technical English for Engineers</h5>
+              <h5>3. Introduction to Internet of Things</h5>
             </div>
           </div>
 
