--- a/index.html
+++ b/index.html
@@ -1192,6 +1192,7 @@
             </div>
           </div>
 
+          <!-- 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/cyber.jpg" class="img-fluid" alt="">
@@ -1199,7 +1200,7 @@
                 <a href="assets/img/portfolio/cyber.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Cyber Wave"><i class="bx bx-plus"></i></a>
                 <a href="awards/cyber.html" title="More Details"><i class="bx bx-expand-alt"></i></a>
-              </div>
+              </div> -->
 
 
             </div>
