--- a/awards/garuda.html
+++ b/awards/garuda.html
@@ -272,7 +272,7 @@
     <div class="container">
 
       <div class="credits">
-        Designed by <a href="https://www.jayanth.xyz/">Jayanth Donavalli</a>
+        Designed by <a href="https://www.jayanth.site/">Jayanth Donavalli</a>
       </div>
     </div>
   </footer><!-- End Footer -->
