--- a/awards/index.html
+++ b/awards/index.html
@@ -24,24 +24,24 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.jayanth.xyz/">
+  <meta property="og:url" content="https://jayanth.site/">
   <meta property="og:title" content="Jayanth Portfolio | Web Developer, Photographer, Editor">
   <meta property="og:description" content="Explore the projects and designs of Donavalli Jayanth.">
-  <meta property="og:image" content="https://www.jayanth.xyz/assets/img/bg1.jpg">
+  <meta property="og:image" content="https://jayanth.site/assets/img/bg1.jpg">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://www.jayanth.xyz/">
+  <meta name="twitter:url" content="https://www.jayanth.site/">
   <meta name="twitter:title" content="Jayanth Portfolio |  Web Developer, Photographer, Editor">
   <meta name="twitter:description" content="Explore the cutting-edge projects and designs of Donavalli Jayanth.">
-  <meta name="twitter:image" content="https://www.jayanth.xyz/assets/img/bg1.jpg">
+  <meta name="twitter:image" content="https://jayanth.site/assets/img/bg1.jpg">
 
   <!-- WhatsApp Meta Tags -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.jayanth.xyz/">
+  <meta property="og:url" content="https://jayanth.site/">
   <meta property="og:title" content="Jayanth Portfolio | Web Developer, Photographer, Editor">
   <meta property="og:description" content="Explore the projects and designs of Donavalli Jayanth.">
-  <meta property="og:image" content="https://www.jayanth.xyz/assets/img/bg1.jpg">
+  <meta property="og:image" content="https://jayanth.site/assets/img/bg1.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="Jayanth Portfolio Preview">
@@ -73,8 +73,8 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Donavalli Jayanth",
-      "url": "https://www.jayanth.xyz/",
-      "image": "https://www.jayanth.xyz/assets/img/bg1.jpg",
+      "url": "https://jayanth.site/",
+      "image": "https://jayanth.site/assets/img/bg1.jpg",
       "jobTitle": "Web Developer, Photographer, Editor",
       "worksFor": {
         "@type": "Organization",
@@ -174,7 +174,7 @@
                   <div class="col-lg-6">
                     <ul>
                       <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a
-                            href="https://jayanth.xyz">Jayanth</a></span></li>
+                            href="https://jayanth.site">Jayanth</a></span></li>
                       <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 7207288496</span></li>
                       <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Vijayawada, Andhra
                           Pradesh</span></li>
