--- a/awards/inner-page.html
+++ b/awards/inner-page.html
@@ -101,7 +101,7 @@
   <footer id="footer">
     <div class="container">
       <div class="credits">
-        Designed by <a href="https://www.jayanth.xyz">Jayanth Donavalli</a>
+        Designed by <a href="https://www.jayanth.site/">Jayanth Donavalli</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
