--- a/404.html
+++ b/404.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error 404 Not Found</title>
+    <title>Page Not Found | Jayanth Portfolio</title>
+    <meta name="description"
+        content="Oops! The page you're looking for on Jayanth's portfolio doesn’t exist. Return to the homepage or explore other sections.">
+    <meta name="keywords" content="Jayanth, 404, page not found, portfolio">
+    <meta name="author" content="Donavalli Jayanth">
+    <link rel="canonical" href="https://www.jayanth.site/404.html" />
+
     <style>
-        body { margin: 0; overflow: hidden; background: #0a0a0a; }
-        canvas { display: block; width: 100vw; height: 100vh; }
+        body {
+            margin: 0;
+            overflow: hidden;
+            background: #0a0a0a;
+        }
+
+        canvas {
+            display: block;
+            width: 100vw;
+            height: 100vh;
+        }
+
         #returnButton {
             position: absolute;
             bottom: 5vh;
@@ -22,9 +39,13 @@
             z-index: 10;
             white-space: nowrap;
         }
-        #returnButton:hover { background: rgba(0, 255, 204, 0.2); }
+
+        #returnButton:hover {
+            background: rgba(0, 255, 204, 0.2);
+        }
     </style>
 </head>
+
 <body>
     <button id="returnButton">Return to Home</button>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
@@ -276,4 +297,5 @@
         });
     </script>
 </body>
+
 </html>
