--- a/awards/inner-page.html
+++ b/awards/inner-page.html
@@ -8,6 +8,11 @@
   <title>Jayanth Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <meta name="description"
+    content="Learn more about Donavalli Jayanth — his journey, background, and passion for building creative web projects.">
+  <meta name="keywords" content="Jayanth, about, biography, web developer, designer, portfolio">
+  <meta name="author" content="Donavalli Jayanth">
+  <link rel="canonical" href="https://www.jayanth.site/inner-page.html" />
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -101,7 +106,7 @@
   <footer id="footer">
     <div class="container">
       <div class="credits">
-        Designed by <a href="https://www.jayanth.site/">Jayanth Donavalli</a>
+        Designed by <a href="https://www.jayanth.site">Jayanth Donavalli</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
