--- a/awards/mindluster.html
+++ b/awards/mindluster.html
@@ -8,6 +8,7 @@
     <title>Certification Details</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
+    <link rel="canonical" href="https://www.jayanth.site/" />
 
     <!-- Favicons -->
     <link href="assets/img/jayanth.png" rel="icon">
