--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <meta name="google-site-verification" content="RgDlIEHIkNAYH_iKQo5yOkA6BhKnkq2cjNAYhV8s9y0" />
 
   <!-- Primary SEO Meta Tags -->
-  <title>Jayanth Portfolio</title>
+  <title>Jayanth Portfolio | Creative Developer & Designer</title>
   <meta name="title" content="Jayanth Portfolio | Web Developer, Photographer, Editor">
   <meta name="description"
-    content="Discover the portfolio of Donavalli Jayanth, Web developer and Python Developer. Explore innovative web Projects, responsive designs, and Python Projects.">
+    content="Welcome to Jayanth's official portfolio — showcasing projects, skills, and creative work.">
   <meta name="author" content="Donavalli Jayanth">
   <meta name="keywords"
     content="Jayanth Portfolio, web developer, software engineer, JavaScript developer, Python developer, digital portfolio, responsive web design, developer showcase, personal website">
@@ -45,6 +45,9 @@
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="Jayanth Portfolio Preview">
+
+  <link rel="canonical" href="https://www.jayanth.site/" />
+
 
 
   <!-- Favicons -->
