--- a/photo.html
+++ b/photo.html
@@ -4,8 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>3D Carousel</title>
+  <title>Jayanth Portfolio | Photo Gallery</title>
+  <meta name="description"
+    content="Explore the photo gallery of Jayanth's creative works, project snapshots, and behind-the-scenes moments.">
+  <meta name="keywords" content="Jayanth, photo gallery, project images, portfolio snapshots, design work">
+  <meta name="author" content="Donavalli Jayanth">
+  <link rel="canonical" href="https://www.jayanth.site/photo.html" />
+
   <link rel="stylesheet" href="assets/css/style1.css">
+
 </head>
 
 <body>
