--- a/awards/index.html
+++ b/awards/index.html
@@ -170,7 +170,7 @@
                 <h3>Frontend Developer</h3>
                 <p class="fst-italic">
                   I'm currently expanding my skills toward full-stack development and learning about AI and large
-                  language models (LLMs). I’m committe    d to staying updated with the latest innovations to build modern
+                  language models (LLMs). I’m committe d to staying updated with the latest innovations to build modern
                   and effective web applications.
                 </p>
                 <div class="row">
@@ -214,7 +214,7 @@
           width: 100%;
           height: auto;
           max-width: 500px;
-          
+
         }
 
         @keyframes upDown {
@@ -550,63 +550,65 @@
       </div>
       <div class="projects-container">
 
+
+
         <!-- Project 1 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/projectA.webp" alt="Project 1" class="project-card-image">
+            <img src="assets/img/portfolio/wa.png" alt="Project 8" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>🎮 Guess to Freedom Game</span>
+            <span>WhatsApp Chat Parser</span>
           </div>
           <div class="project-card-description">
-            A thrilling Hangman-style word game where you must guess the word before running out of attempts! 🏆💡 Every
-            round brings a new word & hint, making each game a fresh challenge. Ready to test your vocabulary?
+            Easily upload your exported WhatsApp chats and explore them in a beautiful, WhatsApp-style interface. Get
+            message insights, view media, and navigate your digital memories with clarity and precision — just like
+            traveling back in time.
           </div>
-          <a href="https://lettermind.netlify.app/" class="project-card-button" target="_blank">
+          <a href="https://texttimemachine.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
           </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/Hangman-game/" data-icon="octicon-star"
+          <a class="github-button" href="https://github.com/Jayanth0124/whatsapp-chat-parser" data-icon="octicon-star"
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
-          <script async defer src="https://buttons.github.io/buttons.js"></script>
-
         </div>
 
         <!-- Project 2 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/projectB.webp" alt="Project 2" class="project-card-image">
+            <img src="assets/img/portfolio/mind.png" alt="Project 10" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>📖 Premium Dictionary App 🌍</span>
+            <span>🧠 MindoraGPT </span>
           </div>
           <div class="project-card-description">
-            A powerful dictionary powered by APIs, providing word meanings, 📚 Wikipedia content with links, and 🖼️
-            related images. Users enjoy a smooth, premium experience while exploring words effortlessly! 🚀🔍
+            Your friendly mental wellness chatbot offering supportive conversations, affirmations, and
+            AI-powered care.🌿 Built with compassion, it blends technology and empathy to help you feel heard, calm, and
+            uplifted.
           </div>
-          <a href="https://wordsage.netlify.app/" class="project-card-button" target="_blank">
+          <a href="https://mindoragpt.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
           </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/dictionary" data-icon="octicon-star"
-            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
-          <script async defer src="https://buttons.github.io/buttons.js"></script>
+          <a class="github-button" href="https://github.com/Jayanth0124/mental-wellness-chatbot"
+            data-icon="octicon-star" data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
         </div>
 
         <!-- Project 3 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/projectC.webp" alt="Project 3" class="project-card-image">
+            <img src="assets/img/portfolio/dna.png" alt="Project 3" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span> 🤖Verinox GPT - Chatbot</span>
+            <span>BioPulse – DNA to Music</span>
           </div>
           <div class="project-card-description">
-            An AI-powered chatbot built using APIs, designed for smart, accurate, and efficient conversations. ⚡🔍 Its
-            name blends "Veri" (truth) + "nox" (intelligence), symbolizing a reliable and next-gen AI assistant! 🚀
+            BioPulse transforms DNA sequences into musical compositions in real time, blending science with sound.
+            Upload or paste your sequence, watch it come alive with animated visuals, and explore genetic patterns
+            through harmony.
           </div>
-          <a href="https://verinox-gpt.netlify.app/" class="project-card-button" target="_blank">
+          <a href="https://bio-pulse.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
           </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/chatbot/" data-icon="octicon-star"
+          <a class="github-button" href="https://github.com/Jayanth0124/dna-to-music" data-icon="octicon-star"
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
           <script async defer src="https://buttons.github.io/buttons.js"></script>
         </div>
@@ -614,14 +616,15 @@
         <!-- Project 4 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/projectD.webp" alt="Project 4" class="project-card-image">
+            <img src="assets/img/portfolio/mobile.png" alt="Project 4" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>File Convertor Tool</span>
+            <span>Ecommerce - Aurora Mobile Hub</span>
           </div>
           <div class="project-card-description">
-            📂 File Converter 🔄 offers powerful tools to make your file conversion seamless. Whether you're managing 📄
-            PDFs or 🖼️ images, this tool is designed to simplify your tasks with ⚡ efficiency and ✅ reliability!
+            Discover and shop the latest smartphones with ease. Aurora Mobile Hub features a sleek, responsive interface
+            with advanced filters, detailed specs, secure auth, and smooth cart & wishlist — built with React, Vite, and
+            Firebase.
           </div>
           <a href="https://formatswift.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
@@ -690,21 +693,22 @@
         <!-- Project 8 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/p8.png" alt="Project 8" class="project-card-image">
+            <img src="assets/img/portfolio/projectA.webp" alt="Project 1" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>ShadeShaper - Color Palette Generator 🎨</span>
+            <span>🎮 Guess to Freedom Game</span>
           </div>
           <div class="project-card-description">
-            A versatile tool for crafting and exporting color palettes with ease. It features AI-based harmony,
-            mood-based schemes, image extraction, live previews, and multiple export formats for designers and
-            developers.
+            A thrilling Hangman-style word game where you must guess the word before running out of attempts! 🏆💡 Every
+            round brings a new word & hint, making each game a fresh challenge. Ready to test your vocabulary?
           </div>
-          <a href="https://shadeshaper.netlify.app/" class="project-card-button" target="_blank">
+          <a href="https://lettermind.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
           </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/colour-palette" data-icon="octicon-star"
+          <a class="github-button" href="https://github.com/Jayanth0124/Hangman-game/" data-icon="octicon-star"
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
+          <script async defer src="https://buttons.github.io/buttons.js"></script>
+
         </div>
 
         <!-- Project 9 -->
@@ -730,22 +734,24 @@
         <!-- Project 10 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/mind.png" alt="Project 10" class="project-card-image">
+            <img src="assets/img/portfolio/projectB.webp" alt="Project 2" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>🧠 MindoraGPT </span>
+            <span>📖 Premium Dictionary App 🌍</span>
           </div>
           <div class="project-card-description">
-            Your friendly mental wellness chatbot offering supportive conversations, affirmations, and
-            AI-powered care.🌿 Built with compassion, it blends technology and empathy to help you feel heard, calm, and
-            uplifted.
+            A powerful dictionary powered by APIs, providing word meanings, 📚 Wikipedia content with links, and 🖼️
+            related images. Users enjoy a smooth, premium experience while exploring words effortlessly! 🚀🔍
           </div>
-          <a href="https://mindoragpt.netlify.app/" class="project-card-button" target="_blank">
+          <a href="https://wordsage.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
           </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/mental-wellness-chatbot"
-            data-icon="octicon-star" data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
+          <a class="github-button" href="https://github.com/Jayanth0124/dictionary" data-icon="octicon-star"
+            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
+          <script async defer src="https://buttons.github.io/buttons.js"></script>
         </div>
+
+
 
       </div>
     </section>
