--- a/index.html
+++ b/index.html
@@ -626,10 +626,10 @@
             with advanced filters, detailed specs, secure auth, and smooth cart & wishlist — built with React, Vite, and
             Firebase.
           </div>
-          <a href="https://formatswift.netlify.app/" class="project-card-button" target="_blank">
+          <a href="https://auroramobilehub.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
           </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/file-converter/" data-icon="octicon-star"
+          <a class="github-button" href="https://github.com/Jayanth0124/ecommerce" data-icon="octicon-star"
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
         </div>
 
