--- a/index.html
+++ b/index.html
@@ -1456,7 +1456,7 @@
       .interests-section .section-title h2 {
         font-size: 32px;
         font-weight: bold;
-        color: #343a40;
+        color: #173b6c;
         /* Dark color for the title */
         margin-bottom: 20px;
       }
@@ -1638,7 +1638,7 @@
       .contact .section-title h2 {
         font-size: 32px;
         font-weight: bold;
-        color: #343a40;
+        color: #173b6c;
         /* Dark text color */
         margin-bottom: 20px;
       }
@@ -1939,10 +1939,10 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="assets/js/main.js"></script>
   <!-- Place this tag in your head or just before your close body tag. -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 
 </body>
-
 </html>
