--- a/index.html
+++ b/index.html
@@ -1915,6 +1915,16 @@
 
   </main><!-- End #main -->
 
+  <!-- Popup Modal -->
+  <div id="popup-modal" class="popup-modal">
+    <div class="popup-content">
+      <span id="popup-close" class="popup-close">&times;</span>
+      <h2>Your visit = little joy moment</h2>
+      <p>Follow me on Github Or I’ll cry, dramatically… with love</p>
+      <a href="https://github.com/Jayanth0124" target="_blank" class="popup-button">Fake Support Button</a>
+      <p class="popup-timer">Closing in <span id="popup-timer-count">10</span>s</p>
+    </div>
+  </div>
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
