--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 </head>
 
 <body>
+  
 
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
@@ -133,6 +134,8 @@
       </nav><!-- .nav-menu -->
     </div>
   </header><!-- End Header -->
+
+
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
@@ -1921,7 +1924,7 @@
       <span id="popup-close" class="popup-close">&times;</span>
       <h2>Your visit = little joy moment</h2>
       <p>Follow me on Github Or I’ll cry, dramatically… with love</p>
-      <a href="https://github.com/Jayanth0124" target="_blank" class="popup-button">Fake Support Button</a>
+      <a href="https://github.com/Jayanth0124" target="_blank" class="popup-button">Follow Me</a>
       <p class="popup-timer">Closing in <span id="popup-timer-count">10</span>s</p>
     </div>
   </div>
